--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       </div>
       <div>
         <button id="btn" type="submit">Enviar</button>
+        <button id="btnRemove">Eliminar</button>
       </div>
     </form>
     <div><p></p></div>
